<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite_border"
        android:title="@string/action_favorite" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/action_share" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete" />
    <item
        android:id="@+id/action_pin"
        android:title="@string/action_pin" />
    <item
        android:id="@+id/action_set_color"
        android:title="@string/action_set_color" />
    <item
        android:id="@+id/action_move_to_category"
        android:title="@string/action_move_to_category" />
    <item
        android:id="@+id/action_export"
        android:title="@string/action_export" />
</menu>
